update sample_list as customer request

--- a/Ui/temp.html
+++ b/Ui/temp.html
@@ -53,12 +53,12 @@
 	<br>
 <hr>
 
-
-	<div class="Imgs"><br><br>Sameple 1 <br><hr>
-<img src="timg.jpg" width="650" height="400" alt=""/></div>
-		<div class="Imgs"><br><br>Sameple 2 <br><hr><img src="timg.jpg" width="650" height="400" alt=""/></div>
-	<div class="Imgs"><br><br>Sameple 3 <br><hr><img src="timg.jpg" width="650" height="400" alt=""/></div>
-
+$ImageList$
+<!--
+	<div class="Imgs"><br><br>Sameple 1 <br><hr><img src="E:\WorkSpace\gloves_test\Program\Ui\Figure_1.png" width="650" height="400" alt=""/></div>
+	<div class="Imgs"><br><br>Sameple 2 <br><hr><img src="E:\WorkSpace\gloves_test\Program\Ui\Figure_1.png" width="650" height="400" alt=""/></div>
+	<div class="Imgs"><br><br>Sameple 3 <br><hr><img src="E:\WorkSpace\gloves_test\Program\Ui\Figure_1.png" width="650" height="400" alt=""/></div>
+-->
 </div>
 </body>
 </html>
