update program to save data as csv file and convet to pdf

--- a/Ui/temp.html
+++ b/Ui/temp.html
@@ -36,7 +36,7 @@
   <tbody>
     <tr>
 <th scope="col">No.</th>
-      <th scope="col">Sample Name</th>
+      <th scope="col">Specimen Name</th>
       <th scope="col">Material</th>
       <th scope="col">Color</th>
       <th scope="col">thickness</th>
