fix bug for create pdf result -- not all data in result

--- a/Ui/temp.html
+++ b/Ui/temp.html
@@ -42,6 +42,8 @@
       <th scope="col">thickness</th>
       <th scope="col">Chemicals</th>
       <th scope="col">Standard</th>
+      <th scope="col">Exposed Time(M)</th>
+      <th scope="col">Remove Liner</th>
       <th scope="col">puncture(N)</th>
       <th scope="col">DRx</th>
 	  <th scope="col">DR</th>
